--- a/index.html
+++ b/index.html
@@ -2,23 +2,16 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - show screen size</title>
-  
-
+  <!-- Chrome, Firefox OS and Opera -->
+  <meta name="theme-color" content="#ff00ff">
+  <!-- Windows Phone (microsoft) -->
+  <meta name="msapplication-navbutton-color" content="#ff00ff">
+  <!-- iOS Safari (apple) -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="#ff00ff">
+  <title>show screen size</title>
 </head>
-<body>
-<!-- partial:index.partial.html -->
-<!-- Chrome, Firefox OS and Opera -->
-<meta name="theme-color" content="#ff00ff">
-<!-- Windows Phone (microsoft) -->
-<meta name="msapplication-navbutton-color" content="#ff00ff">
-<!-- iOS Safari (apple) -->
-<meta name="apple-mobile-web-app-status-bar-style" content="#ff00ff">
 <body onload="screensize()">
-<p id="demo"></p>
+  <p id="demo"></p>
 </body>
-<!-- partial -->
-  <script  src="./script.js"></script>
-
-</body>
+<script  src="./script.js"></script>
 </html>
