--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <!-- Windows Phone (microsoft) -->
   <meta name="msapplication-navbutton-color" content="#ff00ff">
   <!-- iOS Safari (apple) -->
-  <meta name="apple-mobile-web-app-status-bar-style" content="#ff00ff">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-transclucent">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <title>show screen size</title>
 </head>
 <body onload="screensize()">
