--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <title>show screen size</title>
 </head>
-<body onload="screensize()" style="margin:0; padding:1em; background:grey;">
+<body onload="screensize()" style="margin:0; padding:1em; background:blue;">
   <p id="demo"></p>
 </body>
 <script  src="./script.js"></script>
