--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <!-- Windows Phone (microsoft) -->
   <meta name="msapplication-navbutton-color" content="#ff00ff">
   <!-- iOS Safari (apple) -->
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-transclucent">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <title>show screen size</title>
 </head>
-<body onload="screensize()" style="margin:0; padding:1em; background:blue;">
+<body onload="screensize()" style="margin:0; padding:1em; background:white;">
   <p id="demo"></p>
 </body>
 <script  src="./script.js"></script>
