인디케이터 배경색 변경

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
 <!-- partial:index.partial.html -->
 <!-- Chrome, Firefox OS and Opera -->
-<meta name="theme-color" content="#ff00ff">
+<meta name="theme-color" content="#808080">
 <!-- Windows Phone (microsoft) -->
-<meta name="msapplication-navbutton-color" content="#ff00ff">
+<meta name="msapplication-navbutton-color" content="#808080">
 <!-- iOS Safari (apple) -->
-<meta name="apple-mobile-web-app-status-bar-style" content="#ff00ff">
+<meta name="apple-mobile-web-app-status-bar-style" content="#808080">
 <body onload="screensize()">
 <p id="demo"></p>
 </body>
